# sexp

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  Makefile  README.md  _sexp.pyi  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build-wheels.yml  build.yml  docs.yml  publish.yml  quality.yml  test.yml
benchmarks/: conftest.py  inputs.py  test_access.py  test_accessors.py  test_intern.py  test_iter_depth.py  test_memory.py  test_mutation.py  test_parse.py  test_roundtrip.py  test_serialize.py  test_throughput.py  test_traversal.py
bindings/: _sexp.c  _sexp_iter.c  _sexp_node.c  _sexp_tree.c  _sexp_types.h
bindings/sexp/: __init__.py  __init__.pyi
docs/: api.md  guide.md  how-it-works.md
docs/internals/: README.md  arena.md  intern-pool.md  mutation.md  node-array.md  parse.md
examples/: 01_query.py  02_transform.py  03_build.py  04_split_document.py  05_evaluator.py
python/: _sexp.c  _sexp_node.c
python/sexp/: __init__.py  __init__.pyi  _sexp.pyi
src/: arena.c  intern.c  lib.rs  sexp.h  tree.c
src/core/: clone.c  clone.h  clone.rs  iter.rs  mod.rs  mutate.c  mutate.h  mutation.rs  node.c  node.h  node.rs  tree.c  tree.h  tree.rs
src/include/: arena.h  intern.h  sexp.h  tree.h
src/internal/: clone.c  mutate.c
src/memory/: arena.c  arena.h  atom.rs  intern.c  intern.h  mod.rs  slab.rs
src/parse/: error.rs  mod.rs  parse_stack.c  parse_stack.h  parser.c  parser.h  parser.rs  tokenizer.c  tokenizer.h  tokenizer.rs
src/py/: error.rs  iter.rs  mod.rs  parse_fn.rs  sexp.rs  shared.rs
src/serialize/: mod.rs  serializer.c  serializer.h  serializer.rs
stubs/: _sexp.pyi
stubs/pytest_benchmark/: fixture.pyi
tests/c/: CMakeLists.txt  main.c  test_arena.c  test_intern.c  test_tree.c
tests/c/core/: test_clone.c  test_mutate.c  test_tree.c
tests/c/internal/: test_clone.c  test_mutate.c
tests/c/memory/: test_arena.c  test_intern.c
tests/c/parse/: test_parse.c  test_parse_stack.c
tests/c/serialize/: test_serialize.c
tests/python/: conftest.py  test_append_prepend.py  test_clone.py  test_contains.py  test_empty_constructor.py  test_equality.py  test_extract.py  test_head_tail.py  test_index_int.py  test_index_str.py  test_insert_after.py  test_is_atom.py  test_iter.py  test_len.py  test_new_node.py  test_parent.py  test_parse.py  test_parse_error.py  test_remove.py  test_repr.py  test_round_trip.py  test_sexp.py  test_slice.py  test_stale_node.py  test_value.py
tests/python/construction/: test_constructor.py  test_new_node.py
tests/python/copy_move/: test_clone.py  test_extract.py
tests/python/inspection/: test_equality.py  test_is_atom.py  test_len.py  test_repr.py  test_value.py
tests/python/mutation/: test_append_prepend.py  test_insert_after.py  test_remove.py
tests/python/navigation/: test_contains.py  test_head_tail.py  test_indexing.py  test_iter.py  test_parent.py
tests/python/parse/: test_errors.py  test_inputs.py
tests/python/round_trip/: test_round_trip.py
tests/python/staleness/: test_stale_node.py
