[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "sexp"
version = "1.1.1"
description = "A minimal-allocation S-expression library for Python, backed by a C extension."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Andre Koraleski", email = "andrekorale@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AndreKoraleski/sexp"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN", "RUF", "D", "Q"]
ignore = ["ANN401", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]
"benchmarks/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["sexp"]

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------

# stubs/ holds hand-written type stubs for third-party packages that ship no
# annotations of their own.
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["stubs"]
warn_return_any = true
warn_unused_configs = true
exclude = ["^tests/"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = [
    "--cov=sexp",
    "--cov-report=term-missing",
    "--cov-branch",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------

[tool.coverage.run]
source = ["sexp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
]

# -----------------------------------------------------------------------------
# cibuildwheel
# -----------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip  = "pp* cp313t-*"

test-requires = ["pytest", "pytest-benchmark", "pytest-cov"]
test-command  = "pytest {project}/tests/python -x -q --no-cov"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# -----------------------------------------------------------------------------
# scikit-build-core
# -----------------------------------------------------------------------------

[tool.scikit-build]
wheel.packages = ["bindings/sexp"]
cmake.build-type = "Release"
