[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "sexp"
description = "A minimal-allocation S-expression library for Python, backed by Rust."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Andre Koraleski", email = "andrekorale@gmail.com"}]
keywords = ["sexp", "s-expression", "lisp", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/AndreKoraleski/sexp"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

# --- Maturin ---

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "sexp._sexp"

# --- Ruff ---

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["python"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN", "RUF", "D", "Q"]
ignore = ["ANN401", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]
"benchmarks/**" = ["D"]
"python/sexp/__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["sexp"]

# --- Mypy ---

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["^tests/"]

# --- Pytest ---

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = [
    "--cov=sexp",
    "--cov-report=term-missing",
    "--cov-branch",
]

# --- Coverage ---

[tool.coverage.run]
source = ["sexp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
]

# --- CIBuildWheel ---

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip  = "pp* cp313t-*"
test-requires = ["pytest"]
test-command  = "pytest {project}/tests/python -x -q --no-cov"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable"
environment = {PATH = "$HOME/.cargo/bin:$PATH"}

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
