set(UNITY_SRC ../unity/unity.c)
set(UNITY_INC ../unity)
set(LIB_INC   ../../src/include)
set(COMPILE_OPTS -Wall -Wextra -Wpedantic)

function(add_sexp_test target source)
    add_executable(${target} ${source} ${UNITY_SRC})
    target_include_directories(${target} PRIVATE ${UNITY_INC} ${LIB_INC})
    target_link_libraries(${target} sexp_core)
    target_compile_options(${target} PRIVATE ${COMPILE_OPTS})
    add_test(NAME ${target} COMMAND ${target})
endfunction()

add_sexp_test(test_arena  test_arena.c)
add_sexp_test(test_intern test_intern.c)
add_sexp_test(test_tree   test_tree.c)
